--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,4 +119,10 @@
   body {
     @apply bg-background text-foreground;
   }
+  h1 {
+    @apply text-2xl font-semibold;
+  }
+  h1 {
+    @apply text-xl font-medium;
+  }
 }
