--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,3 +131,40 @@
     @apply text-xl font-medium;
   }
 }
+
+.loader {
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  border: 5px solid transparent;
+}
+
+.loader::before {
+  border-top-color: hsl(var(--foreground));
+  border-right-color: hsl(var(--foreground));
+  opacity: 0.9;
+}
+
+.loader::after {
+  inset: 8px;
+  border-top-color: #ff3d00;
+  border-left-color: #ff3d00;
+  opacity: 1;
+  transform: rotate(45deg);
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
